run IT with maven-failsafe-plugin